--- a/nfs/pv-1.yaml
+++ b/nfs/pv-1.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv0007
+  name: pv0007db
 spec:
   capacity:
     storage: 1Gi
@@ -11,4 +11,4 @@ spec:
   persistentVolumeReclaimPolicy: Recycle
   nfs:
     server: localhost
-    path: /var/data/pv0007
+    path: /var/data/pv0007/db
