--- a/nfs/pv-2.yaml
+++ b/nfs/pv-2.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv0002
+  name: pv0007files
 spec:
   capacity:
-    storage: 5Gi
+    storage: 1Gi
   accessModes:
     - ReadWriteOnce
+    - ReadWriteMany
   persistentVolumeReclaimPolicy: Recycle
   nfs:
     server: localhost
-    path: /home/data/pv0002
+    path: /home/data/pv0007/files
