--- a/nfs/pv-1.yaml
+++ b/nfs/pv-1.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv0007db
+  labels: 
+    volume-name: wpdb    
 spec:
   capacity:
     storage: 1Gi
