--- a/nfs/pv-2.yaml
+++ b/nfs/pv-2.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv0007files
+  labels: 
+    volume-name: wpfiles  
 spec:
   capacity:
     storage: 1Gi
