--- a/pvc-mysql.yaml
+++ b/pvc-mysql.yaml
@@ -1,10 +1,16 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: claim-mysql
+  name: wpdb-claim-mysql
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 3Gi
+      storage: 1Gi
+  selector: 
+    matchLabels: 
+      volume-name: wpdb
+
+
+      
