--- a/pvc-wp.yaml
+++ b/pvc-wp.yaml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: claim-wp
+  name: wpfiles-claim-wp
 spec:
   accessModes:
     - ReadWriteOnce
@@ -9,3 +9,6 @@ spec:
   resources:
     requests:
       storage: 1Gi
+  selector: 
+    matchLabels: 
+      volume-name: wpfiles    
