--- a/pod-wordpress.yaml
+++ b/pod-wordpress.yaml
@@ -10,14 +10,12 @@ spec:
       name: wordpress
       env:
         - name: WORDPRESS_DB_USER
-          value: wp_user
+          value: isreehari
         - name: WORDPRESS_DB_PASSWORD
-          value: wp_pass
+          value: SreeharI@123#
         - name: WORDPRESS_DB_NAME
           value: wp_db
-        - name: WORDPRESS_DB_HOST
-          # this is the name of the mysql service fronting the mysql pod in the same namespace
-          # expands to mysql.<namespace>.svc.cluster.local  - where <namespace> is the current namespace
+        - name: WORDPRESS_DB_HOST          
           value: mysql
       ports: 
         - containerPort: 80
@@ -27,4 +25,4 @@ spec:
           mountPath: /var/www/html
   volumes:
     - name: wordpress-persistent-storage
-      persistentVolumeClaim:
+      persistentVolumeClaim: wpfiles-claim-wp
